--- a/breakfast.html
+++ b/breakfast.html
@@ -1,56 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Chef's Secret</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <header id="top-banner" class="header-section">
+    <div class="logo-container">
+      <img src="images/logo.png" alt="Chef's Secret Logo" class="logo">
+    </div>
     <h1>Chef's Secret</h1>
-    <nav class="nav">
-      <a href="index.html">Home</a>
-      <a href="contact.html">Contact me</a>
+    <nav class="navbar">
+      <ul class="navbar-nav">
+        <li><a class="nav-link" href="index.html">Home</a></li>
+        <li><a class="nav-link" href="contact.html">Contact</a></li>
+        <li><a class="nav-link" href="about.html">About Us</a></li>
+      </ul>
     </nav>
   </header>
 
-<main>
   <section class="highlighted-text">
-      <h2>Start Your Morning Right</h2>
-      <div class="recipe-list">
-        <div class="recipe-card">
-          <img src="pancakes.jpg" alt="Pancakes">
-          <div class="recipe-info">
-            <h3>Pancakes</h3>
-            <p>Tender and fluffy pancakes with berries and syrup are a great option for breakfast.</p>
-            <div class="center-link">
-              <p><a href="https://www.russianfood.com/recipes/recipe.php?rid=118122">View Recipe</a></p>
-            </div>
-          </div>
-        </div>
-
-        <div class="recipe-card">
-          <img src="cheeseomelette.jpg" alt="cheeseomelette">
-          <div class="recipe-info">
-            <h3>Cheese Omelette</h3>
-            <p>Classic omelette with melted cheese and fresh herbs.</p>
-            <p><a href="https://www.russianfood.com/recipes/recipe.php?rid=150959">View Recipe</a></p>
-          </div>
-        </div>
-
-        <div class="recipe-card">
-          <img src="breakfast.jpg" alt="toastawitheggs">
-          <div class="recipe-info">
-            <h3>Toasts with eggs</h3>
-            <p>Crunchy toast with soft eggs — simple and tasty breakfast.</p>
-            <p><a href="https://www.russianfood.com/recipes/recipe.php?rid=119863">View Recipe</a></p>
+    <h2>Start Your Morning Right</h2>
+    <div class="recipe-list">
+      <div class="recipe-card">
+        <img src="images/pancakes.jpg" alt="Pancakes">
+        <div class="recipe-info">
+          <h3>Pancakes</h3>
+          <p>Tender and fluffy pancakes with berries and syrup are a great option for breakfast.</p>
+          <div class="center-link">
+            <p><a href="recipes/pancakesRecipe.html">View Recipe</a></p>
           </div>
         </div>
       </div>
-    </section>
+
+      <div class="recipe-card">
+        <img src="images/cheeseomelette.jpg" alt="cheeseomelette">
+        <div class="recipe-info">
+          <h3>Cheese Omelette</h3>
+          <p>Classic omelette with melted cheese and fresh herbs.</p>
+          <p><a href="recipes/cheeseomlette.html">View Recipe</a></p>
+        </div>
+      </div>
+
+      <div class="recipe-card">
+        <img src="images/breakfast.jpg" alt="toastawitheggs">
+        <div class="recipe-info">
+          <h3>Toasts with eggs</h3>
+          <p>Crunchy toast with soft eggs — simple and tasty breakfast.</p>
+          <p><a href="recipes/toastswitheggsRecipe.html">View Recipe</a></p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <footer id="bottom-footer" class="footer-section">
     <p>© 2025 Chef's Secret | Created by Kuchitarova Kamilla and Maxutova Aidana | </p>
   </footer>
 </body>
+
 </html>
