--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,16 @@
 </head>
 <body>
   <header id="top-banner" class="header-section">
+    <div class="logo-container">
+      <img src="images/logo.png" alt="Chef's Secret Logo" class="logo">
+    </div>
     <h1>Chef's Secret</h1>
-    <nav class="nav">
-      <a href="index.html">Home</a>
-      <a href="contact.html">Contact me</a>
+    <nav class="navbar">
+      <ul class="navbar-nav">
+        <li><a class="nav-link" href="index.html">Home</a></li>
+        <li><a class="nav-link" href="contact.html">Contact</a></li>
+        <li><a class="nav-link" href="about.html">About Us</a></li>
+      </ul>
     </nav>
   </header>
   <section class="form-section">
