--- a/lunch.html
+++ b/lunch.html
@@ -1,49 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Chef's Secret</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header id="top-banner" class="header-section">
-    <h1>Chef's Secret</h1>
-    <nav class="nav">
-      <a href="index.html">Home</a>
-      <a href="contact.html">Contact me</a>
-    </nav>
-  </header>
+  <head>
+    <meta charset="UTF-8">
+    <title>Chef's Secret</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+
+  <body>
+    <header id="top-banner" class="header-section">
+      <div class="logo-container">
+        <img src="images/logo.png" alt="Chef's Secret Logo" class="logo">
+      </div>
+      <h1>Chef's Secret</h1>
+      <nav class="nav">
+        <a href="index.html">Home</a>
+        <a href="contact.html">Contact</a>
+        <a href="about.html">About Us</a>
+      </nav>
+    </header>
 
 <main>
   <section class="highlighted-text">
       <h2>Fuel your afternoon with flavor</h2>
       <div class="recipe-list">
         <div class="recipe-card">
-          <img src="borscht.jpg" alt="borscht">
+          <img src="images/borscht.jpg" alt="borscht">
           <div class="recipe-info">
             <h3>Borscht</h3>
             <p>Borscht is a classic beet soup that's so comforting and delicious.</p>
             <div class="center-link">
-              <p><a href="https://www.russianfood.com/recipes/recipe.php?rid=126033">View Recipe</a></p>
+              <p><a href="recipes/borschtRecipe.html">View Recipe</a></p>
             </div>
           </div>
         </div>
 
         <div class="recipe-card">
-          <img src="pepperonipizza.jpg" alt="pepperoni pizza">
+          <img src="images/pepperonipizza.jpg" alt="pepperoni pizza">
           <div class="recipe-info">
             <h3>Pepperoni pizza</h3>
             <p>This pepperoni pizza recipe produces a quick and easy classic! Delicious homemade pizza crust and tomato sauce have never been easier.</p>
-            <p><a href="https://www.russianfood.com/recipes/recipe.php?rid=162819">View Recipe</a></p>
+            <p><a href="recipes/pepperonipizzaRecipe.html">View Recipe</a></p>
           </div>
         </div>
 
         <div class="recipe-card">
-          <img src="Pestopasta.jpg" alt="Pesto pasta">
+          <img src="images/Pestopasta.jpg" alt="Pesto pasta">
           <div class="recipe-info">
             <h3>Pesto pasta</h3>
             <p>Pesto pasta is simple to make and full of flavor. This recipe is perfect for busy weeknights and comes together in just 15 minutes.</p>
-            <p><a href="https://www.russianfood.com/recipes/recipe.php?rid=146805">View Recipe</a></p>
+            <p><a href="recipes/pestopastaRecipe.html">View Recipe</a></p>
           </div>
         </div>
       </div>
