--- a/salad.html
+++ b/salad.html
@@ -1,49 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Chef's Secret</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header id="top-banner" class="header-section">
-    <h1>Chef's Secret</h1>
-    <nav class="nav">
-      <a href="index.html">Home</a>
-      <a href="contact.html">Contact me</a>
-    </nav>
-  </header>
-
-<main>
-  <section class="highlighted-text">
+  <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Chef's Secret</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <header id="top-banner" class="header-section">
+      <div class="logo-container">
+        <img src="images/logo.png" alt="Chef's Secret Logo" class="logo">
+      </div>
+      <h1>Chef's Secret</h1>
+      <nav class="navbar">
+        <ul class="navbar-nav">
+          <li><a class="nav-link" href="index.html">Home</a></li>
+          <li><a class="nav-link" href="contact.html">Contact</a></li>
+          <li><a class="nav-link" href="about.html">About Us</a></li>
+        </ul>
+      </nav>
+    </header>
+    
+    <section class="highlighted-text">
       <h2>Fresh, crisp, and full of goodness</h2>
       <div class="recipe-list">
         <div class="recipe-card">
-          <img src="caeser.jpg" alt="caeser">
+          <img src="images/caeser.jpg" alt="caeser">
           <div class="recipe-info">
             <h3>Caesar Salad</h3>
             <p>Crunchy romaine, parmesan, and croutons tossed in creamy Caesar dressing.</p>
             <div class="center-link">
-              <p><a href="https://www.russianfood.com/recipes/recipe.php?rid=126033">View Recipe</a></p>
+              <p><a href="recipes/caeserRecipe.html">View Recipe</a></p>
             </div>
           </div>
         </div>
 
         <div class="recipe-card">
-          <img src="caprese.jpg" alt="caprese salad">
+          <img src="images/caprese.jpg" alt="caprese salad">
           <div class="recipe-info">
             <h3>Caprese Salad</h3>
             <p>Juicy tomatoes, fresh mozzarella, and basil drizzled with olive oil.</p>
-            <p><a href="https://www.russianfood.com/recipes/recipe.php?rid=162819">View Recipe</a></p>
+            <p><a href="recipes/capreseRecipe.html">View Recipe</a></p>
           </div>
         </div>
 
         <div class="recipe-card">
-          <img src="olivye.jpg" alt="Olivye salad">
+          <img src="images/olivye.jpg" alt="Olivye salad">
           <div class="recipe-info">
             <h3>Olivye salad</h3>
             <p>This Russian salad recipe is what my mom and grandmother make every time there's a family gathering or a special occasion.</p>
-            <p><a href="https://www.russianfood.com/recipes/recipe.php?rid=146805">View Recipe</a></p>
+            <p><a href="recipes/olivyeRecipe.html">View Recipe</a></p>
           </div>
         </div>
       </div>
