--- a/dessert.html
+++ b/dessert.html
@@ -7,44 +7,50 @@
   </head>
   <body>
     <header id="top-banner" class="header-section">
-      <h1>Chef's Secret</h1>
-      <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="contact.html">Contact me</a>
-      </nav>
-    </header>
+    <div class="logo-container">
+      <img src="images/logo.png" alt="Chef's Secret Logo" class="logo">
+    </div>
+    <h1>Chef's Secret</h1>
+    <nav class="navbar">
+      <ul class="navbar-nav">
+        <li><a class="nav-link" href="index.html">Home</a></li>
+        <li><a class="nav-link" href="contact.html">Contact</a></li>
+        <li><a class="nav-link" href="about.html">About Us</a></li>
+      </ul>
+    </nav>
+  </header>
 
     <section class="highlighted-text">
       <h2>Sweeten life one bite at a time</h2>
 
       <div class="recipe-list">
         <div class="recipe-card">
-          <img src="chocolatecake.jpg" alt="chocolate cake">
+          <img src="images/chocolatecake.jpg" alt="chocolate cake">
           <div class="recipe-info">
             <h3>Chocolate Lava Cake</h3>
             <p>A warm chocolate cake with a rich molten center.</p>
             <div class="center-link">
-              <p><a href="chocolateCakeRecipe.html">View Recipe</a></p>
+              <p><a href="recipes/chocolateCakeRecipe.html">View Recipe</a></p>
             </div>
           </div>
         </div>
 
 
         <div class="recipe-card">
-          <img src="cherrytart.jpg" alt="cherry tart">
+          <img src="images/cherrytart.jpg" alt="cherry tart">
           <div class="recipe-info">
             <h3>Cherry Tart</h3>
             <p>A crisp pastry shell filled with custard and topped with fresh cherries.</p>
-            <p><a href="cherrytartrecipe.html">View Recipe</a></p>
+            <p><a href="recipes/cherrytartrecipe.html">View Recipe</a></p>
           </div>
         </div>
 
         <div class="recipe-card">
-          <img src="Tiramisu.jpg" alt="Tiramisu">
+          <img src="images/Tiramisu.jpg" alt="Tiramisu">
           <div class="recipe-info">
             <h3>Tiramisu</h3>
             <p>Classic Italian dessert layered with espresso-soaked ladyfingers and mascarpone cream.</p>
-            <p><a href="tiramisuRecipe.html">View Recipe</a></p>
+            <p><a href="recipes/tiramisuRecipe.html">View Recipe</a></p>
           </div>
         </div>
       </div>
