--- a/drinks.html
+++ b/drinks.html
@@ -8,10 +8,16 @@
   
   <body>
     <header id="top-banner" class="header-section">
+      <div class="logo-container">
+        <img src="images/logo.png" alt="Chef's Secret Logo" class="logo">
+      </div>
       <h1>Chef's Secret</h1>
-      <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="contact.html">Contact me</a>
+      <nav class="navbar">
+        <ul class="navbar-nav">
+          <li><a class="nav-link" href="index.html">Home</a></li>
+          <li><a class="nav-link" href="contact.html">Contact</a></li>
+          <li><a class="nav-link" href="about.html">About Us</a></li>
+        </ul>
       </nav>
     </header>
 
@@ -19,31 +25,31 @@
       <h2>Refresh your day with every sip</h2>
       <div class="recipe-list">
         <div class="recipe-card">
-          <img src="latte.jpg" alt="latte">
+          <img src="images/latte.jpg" alt="latte">
           <div class="recipe-info">
             <h3>Coffee Latte</h3>
             <p>Learn how to make a cafe latte with this easy recipe that will please all fellow coffee drinkers. I love cafe lattes but buying them can be pricey.</p>
             <div class="center-link">
-              <p><a href="latteRecipe.html">View Recipe</a></p>
+              <p><a href="recipes/latteRecipe.html">View Recipe</a></p>
             </div>
           </div>
         </div>
 
         <div class="recipe-card">
-          <img src="appleslush.jpg" alt="apple slush">
+          <img src="images/appleslush.jpg" alt="apple slush">
           <div class="recipe-info">
             <h3>Apple slush</h3>
             <p>Enjoy the fair at home with this apple-flavor slushy.</p>
-            <p><a href="appleslushRecipe.html">View Recipe</a></p>
+            <p><a href="recipes/appleslushRecipe.html">View Recipe</a></p>
           </div>
         </div>
 
         <div class="recipe-card">
-          <img src="martini.jpg" alt="Dirty Martini">
+          <img src="images/martini.jpg" alt="Dirty Martini">
           <div class="recipe-info">
             <h3>Dirty Martini</h3>
             <p>A dirty martini is the perfect cocktail for olive lovers. It can be made with vodka or gin and served on the rocks or chilled.</p>
-            <p><a href="martiniRecipe.html">View Recipe</a></p>
+            <p><a href="recipes/martiniRecipe.html">View Recipe</a></p>
           </div>
         </div>
       </div>
