--- a/about.html
+++ b/about.html
@@ -3,20 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <title>Chef's Secret</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header id="top-banner" class="header-section">
-    <div class="logo-container">
-      <img src="images/logo.png" alt="Chef's Secret Logo" class="logo">
-    </div>
-    <h1>Chef's Secret</h1>
-    <nav class="navbar">
-      <ul class="navbar-nav">
-        <li><a class="nav-link" href="index.html">Home</a></li>
-        <li><a class="nav-link" href="contact.html">Contact</a></li>
-        <li><a class="nav-link" href="about.html">About Us</a></li>
-      </ul>
+    <div class="logo-container"> 
+      <img src="images/logo.png" alt="Chef's Secret Logo" class="logo"> 
+    </div> 
+    <h1>Chef's Secret</h1> 
+    <nav class="navbar navbar-expand-lg p-0">
+      <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
+        data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="mainNav">
+        <ul class="navbar-nav ms-auto navbar-nav-custom">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+        </ul>
+      </div>
     </nav>
   </header>
 
@@ -38,49 +47,95 @@
       </p>
     </section>
 
-    <section class="highlighted-text">
-      <h2>Our Team</h2>
-      <div class="gallery">
-        <div class="gallery-item">
-          <img src="images/aidana.jpg" alt="Aidana">
-          <p class="caption">Maxutova Aidana</p>
+    <section class="container my-5">
+      <h2 class="text-center mb-4">Our Team</h2>
+
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+
+        <div class="col">
+          <div class="card team-card h-100 text-center">
+            <img src="images/aidana.jpg" class="card-img-top" alt="Aidana">
+            <div class="card-body">
+              <h5 class="card-title">Maxutova Aidana</h5>
+            </div>
+          </div>
         </div>
-        <div class="gallery-item">
-          <img src="images/kamilla.jpg" alt="Kamilla">
-          <p class="caption">Kuchitarova Kamilla</p>
+
+        <div class="col">
+          <div class="card team-card h-100 text-center">
+            <img src="images/kamilla.jpg" class="card-img-top" alt="Kamilla">
+            <div class="card-body">
+              <h5 class="card-title">Kuchitarova Kamilla</h5>
+            </div>
+          </div>
         </div>
-        <div class="gallery-item">
-          <img src="images/diana.jpg" alt="Diana">
-          <p class="caption">Shakalova Diana</p>
+
+        <div class="col">
+          <div class="card team-card h-100 text-center">
+            <img src="images/diana.jpg" class="card-img-top" alt="Diana">
+            <div class="card-body">
+              <h5 class="card-title">Shakalova Diana</h5>
+            </div>
+          </div>
         </div>
-        <div class="gallery-item">
-          <img src="images/bolat.jpg" alt="Bolat">
-          <p class="caption">Ibraev Bolat</p>
+
+        <div class="col">
+          <div class="card team-card h-100 text-center">
+            <img src="images/bolat.jpg" class="card-img-top" alt="Bolat">
+            <div class="card-body">
+              <h5 class="card-title">Ibraev Bolat</h5>
+            </div>
+          </div>
         </div>
-        <div class="gallery-item">
-          <img src="images/rinat.jpg" alt="Rinat">
-          <p class="caption">Kuchitarov Rinat</p>
+
+        <div class="col">
+          <div class="card team-card h-100 text-center">
+            <img src="images/rinat.jpg" class="card-img-top" alt="Rinat">
+            <div class="card-body">
+              <h5 class="card-title">Kuchitarov Rinat</h5>
+            </div>
+          </div>
         </div>
-        <div class="gallery-item">
-          <img src="images/veronika.jpg" alt="Veronika">
-          <p class="caption">Ten Veronika</p>
+
+        <div class="col">
+          <div class="card team-card h-100 text-center">
+            <img src="images/veronika.jpg" class="card-img-top" alt="Veronika">
+            <div class="card-body">
+              <h5 class="card-title">Ten Veronika</h5>
+            </div>
+          </div>
         </div>
-        <div class="gallery-item">
-          <img src="images/arina.jpg" alt="Arina">
-          <p class="caption">Dontseva Arina</p>
+
+        <div class="col">
+          <div class="card team-card h-100 text-center">
+            <img src="images/arina.jpg" class="card-img-top" alt="Arina">
+            <div class="card-body">
+              <h5 class="card-title">Dontseva Arina</h5>
+            </div>
+          </div>
         </div>
-        <div class="gallery-item">
-          <img src="images/amina.jpg" alt="Amina">
-          <p class="caption">Uspanova Amina</p>
+
+        <div class="col">
+          <div class="card team-card h-100 text-center">
+            <img src="images/amina.jpg" class="card-img-top" alt="Amina">
+            <div class="card-body">
+              <h5 class="card-title">Uspanova Amina</h5>
+            </div>
+          </div>
         </div>
-        <div class="gallery-item">
-          <img src="images/victoria.jpg" alt="Victoria">
-          <p class="caption">Savitskaya Victoria</p>
+
+        <div class="col">
+          <div class="card team-card h-100 text-center">
+            <img src="images/victoria.jpg" class="card-img-top" alt="Victoria">
+            <div class="card-body">
+              <h5 class="card-title">Savitskaya Victoria</h5>
+            </div>
+          </div>
         </div>
       </div>
     </section>
   </main>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <footer id="bottom-footer" class="footer-section">
     <p>© 2025 Chef's Secret | Created by Kuchitarova Kamilla and Maxutova Aidana | </p>
   </footer>
