--- a/contact.html
+++ b/contact.html
@@ -2,36 +2,71 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chef's Secret</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header id="top-banner" class="header-section">
-    <div class="logo-container">
-      <img src="images/logo.png" alt="Chef's Secret Logo" class="logo">
-    </div>
-    <h1>Chef's Secret</h1>
-    <nav class="navbar">
-      <ul class="navbar-nav">
-        <li><a class="nav-link" href="index.html">Home</a></li>
-        <li><a class="nav-link" href="contact.html">Contact</a></li>
-        <li><a class="nav-link" href="about.html">About Us</a></li>
-      </ul>
+    <div class="logo-container"> 
+      <img src="images/logo.png" alt="Chef's Secret Logo" class="logo"> 
+    </div> 
+    <h1>Chef's Secret</h1> 
+    <nav class="navbar navbar-expand-lg p-0">
+      <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
+        data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="mainNav">
+        <ul class="navbar-nav ms-auto navbar-nav-custom">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+        </ul>
+      </div>
     </nav>
   </header>
-  <section class="form-section">
-      <h2>Contact Me</h2>
-      <form>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name"><br><br>
+  <section class="container my-5">
+    <h2 class="text-center mb-4">Contact Us</h2>
+    <form class="mx-auto" style="max-width: 600px;">
+      <!-- Name -->
+      <div class="mb-3">
+        <label for="name" class="form-label">Your Name</label>
+        <input type="text" class="form-control" id="name" placeholder="Enter your name">
+      </div>
 
-        <label for="msg">Message:</label>
-        <textarea id="msg"></textarea><br><br>
+      <!-- Email -->
+      <div class="mb-3">
+        <label for="email" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="email" placeholder="name@example.com">
+      </div>
 
-        <button type="submit">Send</button>
-      </form>
-    </section>
-    <footer id="bottom-footer" class="footer-section">
+      <!-- Message -->
+      <div class="mb-3">
+        <label for="message" class="form-label">Message</label>
+        <textarea class="form-control" id="message" rows="4" placeholder="Write your message here..."></textarea>
+      </div>
+
+      <!-- Checkbox -->
+      <div class="form-check mb-3">
+        <input class="form-check-input" type="checkbox" value="" id="subscribe">
+        <label class="form-check-label" for="subscribe">
+          Subscribe to our newsletter
+        </label>
+      </div>
+
+      <!-- Buttons -->
+      <div class="d-flex justify-content-center gap-3">
+        <button type="submit" class="btn btn-primary">Send</button>
+        <button type="reset" class="btn btn-outline-secondary">Clear</button>
+      </div>
+    </form>
+  </section>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <footer id="bottom-footer" class="footer-section">
     <p>© 2025 Chef's Secret | Created by Kuchitarova Kamilla and Maxutova Aidana | </p>
   </footer>
   </body>
