--- a/lunch.html
+++ b/lunch.html
@@ -3,23 +3,35 @@
   <head>
     <meta charset="UTF-8">
     <title>Chef's Secret</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
     <header id="top-banner" class="header-section">
-      <div class="logo-container">
-        <img src="images/logo.png" alt="Chef's Secret Logo" class="logo">
-      </div>
-      <h1>Chef's Secret</h1>
-      <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="contact.html">Contact</a>
-        <a href="about.html">About Us</a>
-      </nav>
-    </header>
+    <div class="logo-container"> 
+      <img src="images/logo.png" alt="Chef's Secret Logo" class="logo"> 
+    </div> 
+    <h1>Chef's Secret</h1> 
+    <nav class="navbar navbar-expand-lg p-0">
+      <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
+        data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <section class="highlighted-text">
+      <div class="collapse navbar-collapse" id="mainNav">
+        <ul class="navbar-nav ms-auto navbar-nav-custom">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+<main>
+  <section class="highlighted-text">
       <h2>Fuel your afternoon with flavor</h2>
       <div class="recipe-list">
         <div class="recipe-card">
@@ -52,9 +64,10 @@
         </div>
       </div>
     </section>
-
-    <footer id="bottom-footer" class="footer-section">
-      <p>© 2025 Chef's Secret | Created by Kuchitarova Kamilla and Maxutova Aidana | </p>
-    </footer>
-  </body>
+  </main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <footer id="bottom-footer" class="footer-section">
+    <p>© 2025 Chef's Secret | Created by Kuchitarova Kamilla and Maxutova Aidana | </p>
+  </footer>
+</body>
 </html>
