--- a/recipes/cheeseomlette.html
+++ b/recipes/cheeseomlette.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Cheese Omelette Recipe</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
 </head>
 
@@ -13,12 +14,19 @@
             <img src="../images/logo.png" alt="Chef's Secret Logo" class="logo">
         </div>
         <h1>Chef's Secret</h1>
-        <nav class="navbar">
-            <ul class="navbar-nav">
-                <li><a class="nav-link" href="../index.html">Home</a></li>
-                <li><a class="nav-link" href="../contact.html">Contact</a></li>
-                <li><a class="nav-link" href="../about.html">About Us</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg p-0">
+            <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+                aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="mainNav">
+                <ul class="navbar-nav ms-auto navbar-nav-custom">
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../about.html">About Us</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
 
@@ -77,6 +85,7 @@
     <div class="center-link">
         <p><a href="../index.html">← Back to Recipes</a></p>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
