--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <img src="images/chocolatecake.jpg" class="d-block w-100" alt="Chocolate Cake">
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#recipeCarousel" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="arouse#recipeCl" data-bs-slide="prev">
           <span class="carousel-control-prev-icon"></span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#recipeCarousel" data-bs-slide="next">
