--- a/salad.html
+++ b/salad.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
-  <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chef's Secret</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <header id="top-banner" class="header-section">
-    <div class="logo-container"> 
-      <img src="images/logo.png" alt="Chef's Secret Logo" class="logo"> 
-    </div> 
-    <h1>Chef's Secret</h1> 
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chef's Secret</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <header id="top-banner" class="header-section">
+    <div class="logo-container">
+      <img src="images/logo.png" alt="Chef's Secret Logo" class="logo">
+    </div>
+    <h1>Chef's Secret</h1>
     <nav class="navbar navbar-expand-lg p-0">
-      <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
-        data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false"
-        aria-label="Toggle navigation">
+      <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+        aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
@@ -29,44 +30,46 @@
       </div>
     </nav>
   </header>
-    
-    <section class="highlighted-text">
-      <h2>Fresh, crisp, and full of goodness</h2>
-      <div class="recipe-list">
-        <div class="recipe-card">
-          <img src="images/caeser.jpg" alt="caeser">
-          <div class="recipe-info">
-            <h3>Caesar Salad</h3>
-            <p>Crunchy romaine, parmesan, and croutons tossed in creamy Caesar dressing.</p>
-            <div class="center-link">
-              <p><a href="recipes/caeserRecipe.html">View Recipe</a></p>
-            </div>
-          </div>
-        </div>
 
-        <div class="recipe-card">
-          <img src="images/caprese.jpg" alt="caprese salad">
-          <div class="recipe-info">
-            <h3>Caprese Salad</h3>
-            <p>Juicy tomatoes, fresh mozzarella, and basil drizzled with olive oil.</p>
-            <p><a href="recipes/capreseRecipe.html">View Recipe</a></p>
-          </div>
-        </div>
-
-        <div class="recipe-card">
-          <img src="images/olivye.jpg" alt="Olivye salad">
-          <div class="recipe-info">
-            <h3>Olivye salad</h3>
-            <p>This Russian salad recipe is what my mom and grandmother make every time there's a family gathering or a special occasion.</p>
-            <p><a href="recipes/olivyeRecipe.html">View Recipe</a></p>
+  <section class="highlighted-text">
+    <h2>Fresh, crisp, and full of goodness</h2>
+    <div class="recipe-list">
+      <div class="recipe-card">
+        <img src="images/caeser.jpg" alt="caeser">
+        <div class="recipe-info">
+          <h3>Caesar Salad</h3>
+          <p>Crunchy romaine, parmesan, and croutons tossed in creamy Caesar dressing.</p>
+          <div class="center-link">
+            <p><a href="recipes/caeserRecipe.html">View Recipe</a></p>
           </div>
         </div>
       </div>
-    </section>
+
+      <div class="recipe-card">
+        <img src="images/caprese.jpg" alt="caprese salad">
+        <div class="recipe-info">
+          <h3>Caprese Salad</h3>
+          <p>Juicy tomatoes, fresh mozzarella, and basil drizzled with olive oil.</p>
+          <p><a href="recipes/capreseRecipe.html">View Recipe</a></p>
+        </div>
+      </div>
+
+      <div class="recipe-card">
+        <img src="images/olivye.jpg" alt="Olivye salad">
+        <div class="recipe-info">
+          <h3>Olivye salad</h3>
+          <p>This Russian salad recipe is what my mom and grandmother make every time there's a family gathering or a
+            special occasion.</p>
+          <p><a href="recipes/olivyeRecipe.html">View Recipe</a></p>
+        </div>
+      </div>
+    </div>
+  </section>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <footer id="bottom-footer" class="footer-section">
     <p>© 2025 Chef's Secret | Created by Kuchitarova Kamilla and Maxutova Aidana | </p>
   </footer>
 </body>
+
 </html>
