--- a/breakfast.html
+++ b/breakfast.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+  <div id="time"></div>
+
   <header id="top-banner" class="header-section">
     <div class="logo-container"> 
       <img src="images/logo.png" alt="Chef's Secret Logo" class="logo"> 
@@ -69,6 +71,8 @@
   <footer id="bottom-footer" class="footer-section">
     <p>© 2025 Chef's Secret | Created by Kuchitarova Kamilla and Maxutova Aidana | </p>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 
 </html>
