--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+  <div id="time"></div>
+  
   <header id="top-banner" class="header-section">
     <div class="logo-container">
       <img src="images/logo.png" alt="Chef's Secret Logo" class="logo">
@@ -70,6 +72,7 @@
   <footer id="bottom-footer" class="footer-section">
     <p>© 2025 Chef's Secret | Created by Kuchitarova Kamilla and Maxutova Aidana | </p>
   </footer>
+  <script src="script.js"></script>
 </body>
 
 </html>
