--- a/recipes/cheeseomlette.html
+++ b/recipes/cheeseomlette.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <div id="time"></div>
+
     <header id="top-banner" class="header-section">
         <div class="logo-container">
             <img src="../images/logo.png" alt="Chef's Secret Logo" class="logo">
@@ -87,6 +89,7 @@
         <p><a href="../index.html">← Back to Recipes</a></p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
