--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,7 @@
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="FAQ.html">Questions</a></li>
         </ul>
       </div>
     </nav>
@@ -63,7 +64,7 @@
 
       <!-- Buttons -->
       <div class="d-flex justify-content-center gap-3">
-        <button type="submit" class="btn btn-primary">Send</button>
+        <button type="submit" class="btn btn-secondary">Send</button>
         <button type="reset" class="btn btn-outline-secondary">Clear</button>
       </div>
     </form>
