--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="FAQ.html">Questions</a></li>
         </ul>
       </div>
     </nav>
@@ -116,6 +117,26 @@
 
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <button id="openPopup" class="btn btn-secondary my-4 d-block mx-auto">
+    Subscribe
+  </button>
+
+  <div id="popupOverlay" class="popup-overlay">
+    <div class="popup-box">
+      <span id="closePopup" class="close-btn">&times;</span>
+      <h3 class="mb-3 text-center">Subscribe to Our Newsletter</h3>
+      <form id="popupForm">
+        <div class="mb-3">
+          <label for="popupEmail" class="form-label">Email address</label>
+          <input type="email" id="popupEmail" class="form-control" placeholder="name@example.com" required>
+        </div>
+        <div class="text-center">
+          <button type="submit" class="btn btn-primary">Subscribe</button>
+        </div>
+      </form>
+    </div>
+  </div>
+
   <footer id="bottom-footer" class="footer-section">
     <p>© 2025 Chef's Secret | Created by Kuchitarova Kamilla and Maxutova Aidana | </p>
   </footer>
