--- a/lunch.html
+++ b/lunch.html
@@ -28,6 +28,7 @@
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="FAQ.html">Questions</a></li>
         </ul>
       </div>
     </nav>
