--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chef's Secret</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -34,6 +35,7 @@
   </header>
 
   <main>
+
     <section class="highlighted-text">
       <h2>About Us</h2>
       <p>
@@ -58,7 +60,7 @@
 
         <div class="col">
           <div class="card team-card h-100 text-center">
-            <img src="images/aidana.jpg" class="card-img-top" alt="Aidana">
+            <img src="images/placeholder.jpg" data-src="images/aidana.jpg" class="card-img-top lazy" alt="Aidana">
             <div class="card-body">
               <h5 class="card-title">Maxutova Aidana</h5>
             </div>
@@ -67,7 +69,7 @@
 
         <div class="col">
           <div class="card team-card h-100 text-center">
-            <img src="images/kamilla.jpg" class="card-img-top" alt="Kamilla">
+            <img src="images/placeholder.jpg" data-src="images/kamilla.jpg" class="card-img-top lazy" alt="Kamilla">
             <div class="card-body">
               <h5 class="card-title">Kuchitarova Kamilla</h5>
             </div>
@@ -76,7 +78,7 @@
 
         <div class="col">
           <div class="card team-card h-100 text-center">
-            <img src="images/diana.jpg" class="card-img-top" alt="Diana">
+            <img src="images/placeholder.jpg" data-src="images/diana.jpg" class="card-img-top lazy" alt="Diana">
             <div class="card-body">
               <h5 class="card-title">Shakalova Diana</h5>
             </div>
@@ -85,7 +87,7 @@
 
         <div class="col">
           <div class="card team-card h-100 text-center">
-            <img src="images/bolat.jpg" class="card-img-top" alt="Bolat">
+            <img src="images/placeholder.jpg" data-src="images/bolat.jpg" class="card-img-top lazy" alt="Bolat">
             <div class="card-body">
               <h5 class="card-title">Ibraev Bolat</h5>
             </div>
@@ -94,7 +96,7 @@
 
         <div class="col">
           <div class="card team-card h-100 text-center">
-            <img src="images/rinat.jpg" class="card-img-top" alt="Rinat">
+            <img src="images/placeholder.jpg" data-src="images/rinat.jpg" class="card-img-top lazy" alt="Rinat">
             <div class="card-body">
               <h5 class="card-title">Kuchitarov Rinat</h5>
             </div>
@@ -103,7 +105,7 @@
 
         <div class="col">
           <div class="card team-card h-100 text-center">
-            <img src="images/veronika.jpg" class="card-img-top" alt="Veronika">
+            <img src="images/placeholder.jpg" data-src="images/veronika.jpg" class="card-img-top lazy" alt="Veronika">
             <div class="card-body">
               <h5 class="card-title">Ten Veronika</h5>
             </div>
@@ -112,7 +114,7 @@
 
         <div class="col">
           <div class="card team-card h-100 text-center">
-            <img src="images/arina.jpg" class="card-img-top" alt="Arina">
+            <img src="images/placeholder.jpg" data-src="images/arina.jpg" class="card-img-top lazy" alt="Arina">
             <div class="card-body">
               <h5 class="card-title">Dontseva Arina</h5>
             </div>
@@ -121,7 +123,7 @@
 
         <div class="col">
           <div class="card team-card h-100 text-center">
-            <img src="images/amina.jpg" class="card-img-top" alt="Amina">
+            <img src="images/placeholder.jpg" data-src="images/amina.jpg" class="card-img-top lazy" alt="Amina">
             <div class="card-body">
               <h5 class="card-title">Uspanova Amina</h5>
             </div>
@@ -130,7 +132,7 @@
 
         <div class="col">
           <div class="card team-card h-100 text-center">
-            <img src="images/victoria.jpg" class="card-img-top" alt="Victoria">
+            <img src="images/placeholder.jpg" data-src="images/victoria.jpg" class="card-img-top lazy" alt="Victoria">
             <div class="card-body">
               <h5 class="card-title">Savitskaya Victoria</h5>
             </div>
