--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chef's Secret</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -64,8 +65,12 @@
 
       <!-- Buttons -->
       <div class="d-flex justify-content-center gap-3">
-        <button type="submit" class="btn btn-secondary">Send</button>
+        <button type="submit" id="submitBtn" class="btn btn-secondary">Send</button>
         <button id="clearBtn" class="btn btn-outline-secondary">Clear</button>
+      </div>
+
+      <div id="formNotification" class="alert alert-success text-center mt-3" style="display:none;">
+        ✅ Message sent successfully!
       </div>
 
     </form>
