--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chef's Secret</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+  <div id="scrollProgress"></div>
+
   <div id="time"></div>
 
   <header id="top-banner" class="header-section">
@@ -43,6 +46,30 @@
       <h2>Delicious recipes for every day</h2>
       <p>Discover the secrets of easy and fast cooking with us!</p>
     </section>
+
+    <section class="container my-5 text-center">
+      <h2>Search Recipes</h2>
+
+      <input type="text" id="searchInput" class="form-control mx-auto" style="max-width:400px;" placeholder="Search for recipes...">
+      <div id="suggestions" class="mt-2"></div>
+
+      <button id="highlightBtn" class="btn btn-secondary mt-3">Highlight Matches</button>
+
+      <ul class="list-group mt-4">
+        <li class="list-group-item search-item">Apple Slush Recipe</li>
+        <li class="list-group-item search-item">Borscht Recipe</li>
+        <li class="list-group-item search-item">Caesar Salad Recipe</li>
+        <li class="list-group-item search-item">Pesto Pasta Recipe</li>
+        <li class="list-group-item search-item">Tiramisu Recipe</li>
+      </ul>
+
+      <div class="highlight-area mt-4 p-3 border rounded">
+        Cooking is an art! Try our Caesar salad, borscht, or tiramisu recipes — all easy and delicious.
+      </div>
+    </section>
+
+
+
 
     <section class="highlighted-text">
       <h2>Catalog</h2>
