--- a/recipes/cheeseomlette.html
+++ b/recipes/cheeseomlette.html
@@ -38,7 +38,7 @@
         <header class="recipe-header">
             <img src="../images/cheeseomelette.jpg" alt="cheeseomelette">
             <h2>Cheese omelette</h2>
-            <p>This cheese omelette is great for breakfast. My husband loves omelettes and nothing makes him happier.</p>
+            <p>This cheese omelette is great for breakfast.</p>
         </header>
 
         <aside class="recipe-sidebar">
@@ -67,15 +67,15 @@
             <section class="cooking-instructions">
                 <h3>Instructions</h3>
                 <ol>
-                    <li>Preheat oven to 220°C (425°F). Grease 4 ramekins with butter and dust with cocoa powder.</li>
-                    <li>Melt butter and chocolate together in a heatproof bowl set over a pan of simmering water.</li>
-                    <li>In a separate bowl, whisk eggs, egg yolks, and sugar until light and fluffy.</li>
-                    <li>Gently fold the melted chocolate mixture into the egg mixture.</li>
-                    <li>Sift in the flour and salt, then add vanilla extract. Fold until just combined.</li>
-                    <li>Divide the batter evenly among the prepared ramekins.</li>
-                    <li>Bake for 12-14 minutes until the edges are set but the centers are still soft.</li>
-                    <li>Let cool for 1 minute, then run a knife around the edges and invert onto serving plates.</li>
-                    <li>Serve immediately with ice cream or fresh berries.</li>
+                    <li>Whisk eggs in a bowl; add milk and season with salt and white pepper.</li>
+                    <li>Whisk until egg mixture is foamy, 2 to 3 minutes.</li>
+                    <li>Melt butter in a small, nonstick skillet over medium-low heat.</li>
+                    <li>Pour in egg mixture and swirl the skillet, so the bottom is evenly covered with egg. </li>
+                    <li>Cook until egg starts to set, about 1 minute. </li>
+                    <li>Lift edges with a spatula and tilt the skillet so uncooked egg can flow towards the bottom of the skillet to set.</li>
+                    <li>Repeat until no visible liquid egg remains.</li>
+                    <li>Carefully flip omelette; cook until warmed through, 30 seconds to 1 minute.</li>
+                    <li>Sprinkle Emmentaler cheese down the middle of omelette; fold in half.</li>
                 </ol>
             </section>
         </main>
