--- a/recipes/pancakesRecipe.html
+++ b/recipes/pancakesRecipe.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chocolate Lava Cake Recipe</title>
+    <title>Pancakes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
 </head>
@@ -38,21 +38,20 @@
         <header class="recipe-header">
             <img src="../images/pancakes.jpg" alt="pancakes">
             <h2>Pancakes</h2>
-            <p>A decadent dessert with a warm, flowing chocolate center.</p>
+            <p>These pancakes are tender, light, buttery, and delicious.</p>
         </header>
 
         <aside class="recipe-sidebar">
             <h3>Ingredients</h3>
             <ul>
-                <li>1/2 cup unsalted butter</li>
-                <li>4 oz dark chocolate</li>
-                <li>2 eggs + 2 egg yolks</li>
-                <li>1/4 cup sugar</li>
-                <li>2 tbsp flour</li>
-                <li>Pinch of salt</li>
-                <li>1 tsp vanilla extract</li>
-                <li>Butter for ramekins</li>
-                <li>Cocoa powder for dusting</li>
+                <li>1 ½ cups all-purpose flour</li>
+                <li>3 ½ teaspoons baking powder</li>
+                <li>1 tablespoon white sugar</li>
+                <li>1 teaspoon salt</li>
+                <li>1 ¼ cups milk</li>
+                <li>3 tablespoons butter, melted</li>
+                <li>1 egg</li>
+                <li>cooking spray</li>
             </ul>
         </aside>
 
@@ -64,22 +63,20 @@
                 </div>
                 <div class="info-box">
                     <h3>Cooking Time</h3>
-                    <p>25 minutes</p>
+                    <p>25 mins</p>
                 </div>
             </div>
 
             <section class="cooking-instructions">
                 <h3>Instructions</h3>
                 <ol>
-                    <li>Preheat oven to 220°C (425°F). Grease 4 ramekins with butter and dust with cocoa powder.</li>
-                    <li>Melt butter and chocolate together in a heatproof bowl set over a pan of simmering water.</li>
-                    <li>In a separate bowl, whisk eggs, egg yolks, and sugar until light and fluffy.</li>
-                    <li>Gently fold the melted chocolate mixture into the egg mixture.</li>
-                    <li>Sift in the flour and salt, then add vanilla extract. Fold until just combined.</li>
-                    <li>Divide the batter evenly among the prepared ramekins.</li>
-                    <li>Bake for 12-14 minutes until the edges are set but the centers are still soft.</li>
-                    <li>Let cool for 1 minute, then run a knife around the edges and invert onto serving plates.</li>
-                    <li>Serve immediately with ice cream or fresh berries.</li>
+                    <li>Sift together flour, baking powder, sugar, and salt in a large bowl.</li>
+                    <li>Whisk in milk, melted butter, and egg until combined. Let batter rest for 5 minutes. </li>
+                    <li>Preheat a large skillet over medium-high heat. Spray with cooking spray.</li>
+                    <li>Pour batter into the hot skillet, about 1/4 cup batter for each pancake. </li>
+                    <li>Cook until bubbles appear on the sides and center of each pancake, 2 to 3 minutes.</li>
+                    <li>Flip and cook until the bottom is golden, 1 to 2 minutes.</li>
+                    <li>Serve with butter and maple syrup and enjoy!</li>
                 </ol>
             </section>
         </main>
