--- a/recipes/toastswitheggsRecipe.html
+++ b/recipes/toastswitheggsRecipe.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chocolate Lava Cake Recipe</title>
+    <title>Toast with eggs recipe</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
 </head>
@@ -38,7 +38,7 @@
         <header class="recipe-header">
             <img src="../images/breakfast.jpg" alt="Toast with eggs">
             <h2>Toast with eggs</h2>
-            <p>A decadent dessert with a warm, flowing chocolate center.</p>
+            <p>Creamed eggs on toast is my husband's favorite use of leftover hard-boiled Easter eggs.</p>
         </header>
 
         <aside class="recipe-sidebar">
@@ -60,7 +60,7 @@
             <div class="info-boxes">
                 <div class="info-box">
                     <h3>Portions</h3>
-                    <p>4 servings</p>
+                    <p>6 servings</p>
                 </div>
                 <div class="info-box">
                     <h3>Cooking Time</h3>
