--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
   </header>
   <section class="container my-5">
     <h2 class="text-center mb-4">Contact Us</h2>
-    <form class="mx-auto" style="max-width: 600px;">
+    <form id="contactForm" class="mx-auto" style="max-width: 600px;">
       <!-- Name -->
       <div class="mb-3">
         <label for="name" class="form-label">Your Name</label>
