--- a/breakfast.html
+++ b/breakfast.html
@@ -59,7 +59,7 @@
         <div class="recipe-info">
           <h3>Cheese Omelette</h3>
           <p>Classic omelette with melted cheese and fresh herbs.</p>
-          <p><a href="recipes/cheeseomlette.html">View Recipe</a></p>
+          <p><a href="recipes/cheeseomelette.html">View Recipe</a></p>
         </div>
       </div>
 
