--- a/index.html
+++ b/index.html
@@ -79,18 +79,11 @@
       <h2>Search Recipes</h2>
 
       <input type="text" id="searchInput" class="form-control mx-auto" style="max-width:400px;"
-        placeholder="Search for recipes...">
+        placeholder="Search for recipes..."><br>
+      <button id="searchBtn" class="btn btn-primary">Search</button>
       <div id="suggestions" class="mt-2"></div>
 
-      <button id="highlightBtn" class="btn btn-secondary mt-3">Highlight Matches</button>
-
-      <ul class="list-group mt-4">
-        <li class="list-group-item search-item">Apple Slush Recipe</li>
-        <li class="list-group-item search-item">Borscht Recipe</li>
-        <li class="list-group-item search-item">Caesar Salad Recipe</li>
-        <li class="list-group-item search-item">Pesto Pasta Recipe</li>
-        <li class="list-group-item search-item">Tiramisu Recipe</li>
-      </ul>
+      
 
       <div class="highlight-area mt-4 p-3 border rounded">
         Cooking is an art! Try our Caesar salad, borscht, or tiramisu recipes — all easy and delicious.
