--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"> 
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,18 +9,18 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <div id="time"></div>
 
   <header id="top-banner" class="header-section">
-    <div class="logo-container"> 
-      <img src="images/logo.png" alt="Chef's Secret Logo" class="logo"> 
-    </div> 
-    <h1>Chef's Secret</h1> 
+    <div class="logo-container">
+      <img src="images/logo.png" alt="Chef's Secret Logo" class="logo">
+    </div>
+    <h1>Chef's Secret</h1>
     <nav class="navbar navbar-expand-lg p-0">
-      <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
-        data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false"
-        aria-label="Toggle navigation">
+      <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+        aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
@@ -39,7 +40,8 @@
     <section class="highlighted-text">
       <h2>About Us</h2>
       <p>
-        Welcome to <strong>Chef's Secret</strong> — a project created with love for those who value delicious and simple recipes. 
+        Welcome to <strong>Chef's Secret</strong> — a project created with love for those who value delicious and simple
+        recipes.
         Our goal is to make cooking easy, fun, and inspiring for everyone, from beginners to professionals.
       </p>
     </section>
@@ -47,8 +49,8 @@
     <section class="highlighted-text">
       <h2>Our Mission</h2>
       <p>
-        We believe that food brings people together. That’s why we’ve collected recipes from around the world — 
-        healthy breakfasts, quick lunches, refreshing drinks, vibrant salads, and indulgent desserts — so that 
+        We believe that food brings people together. That’s why we’ve collected recipes from around the world —
+        healthy breakfasts, quick lunches, refreshing drinks, vibrant salads, and indulgent desserts — so that
         everyone can find something to enjoy.
       </p>
     </section>
@@ -60,7 +62,7 @@
 
         <div class="col">
           <div class="card team-card h-100 text-center">
-            <img src="images/placeholder.jpg" data-src="images/aidana.jpg" class="card-img-top lazy" alt="Aidana">
+            <img data-src="images/aidana.jpg" class="card-img-top lazy" alt="Aidana">
             <div class="card-body">
               <h5 class="card-title">Maxutova Aidana</h5>
             </div>
@@ -69,7 +71,7 @@
 
         <div class="col">
           <div class="card team-card h-100 text-center">
-            <img src="images/placeholder.jpg" data-src="images/kamilla.jpg" class="card-img-top lazy" alt="Kamilla">
+            <img data-src="images/kamilla.jpg" class="card-img-top lazy" alt="Kamilla">
             <div class="card-body">
               <h5 class="card-title">Kuchitarova Kamilla</h5>
             </div>
@@ -78,7 +80,7 @@
 
         <div class="col">
           <div class="card team-card h-100 text-center">
-            <img src="images/placeholder.jpg" data-src="images/diana.jpg" class="card-img-top lazy" alt="Diana">
+            <img data-src="images/diana.jpg" class="card-img-top lazy" alt="Diana">
             <div class="card-body">
               <h5 class="card-title">Shakalova Diana</h5>
             </div>
@@ -87,7 +89,7 @@
 
         <div class="col">
           <div class="card team-card h-100 text-center">
-            <img src="images/placeholder.jpg" data-src="images/bolat.jpg" class="card-img-top lazy" alt="Bolat">
+            <img data-src="images/bolat.jpg" class="card-img-top lazy" alt="Bolat">
             <div class="card-body">
               <h5 class="card-title">Ibraev Bolat</h5>
             </div>
@@ -96,7 +98,7 @@
 
         <div class="col">
           <div class="card team-card h-100 text-center">
-            <img src="images/placeholder.jpg" data-src="images/rinat.jpg" class="card-img-top lazy" alt="Rinat">
+            <img data-src="images/rinat.jpg" class="card-img-top lazy" alt="Rinat">
             <div class="card-body">
               <h5 class="card-title">Kuchitarov Rinat</h5>
             </div>
@@ -105,7 +107,7 @@
 
         <div class="col">
           <div class="card team-card h-100 text-center">
-            <img src="images/placeholder.jpg" data-src="images/veronika.jpg" class="card-img-top lazy" alt="Veronika">
+            <img data-src="images/veronika.jpg" class="card-img-top lazy" alt="Veronika">
             <div class="card-body">
               <h5 class="card-title">Ten Veronika</h5>
             </div>
@@ -114,7 +116,7 @@
 
         <div class="col">
           <div class="card team-card h-100 text-center">
-            <img src="images/placeholder.jpg" data-src="images/arina.jpg" class="card-img-top lazy" alt="Arina">
+            <img data-src="images/arina.jpg" class="card-img-top lazy" alt="Arina">
             <div class="card-body">
               <h5 class="card-title">Dontseva Arina</h5>
             </div>
@@ -123,7 +125,7 @@
 
         <div class="col">
           <div class="card team-card h-100 text-center">
-            <img src="images/placeholder.jpg" data-src="images/amina.jpg" class="card-img-top lazy" alt="Amina">
+            <img data-src="images/amina.jpg" class="card-img-top lazy" alt="Amina">
             <div class="card-body">
               <h5 class="card-title">Uspanova Amina</h5>
             </div>
@@ -132,7 +134,7 @@
 
         <div class="col">
           <div class="card team-card h-100 text-center">
-            <img src="images/placeholder.jpg" data-src="images/victoria.jpg" class="card-img-top lazy" alt="Victoria">
+            <img data-src="images/victoria.jpg" class="card-img-top lazy" alt="Victoria">
             <div class="card-body">
               <h5 class="card-title">Savitskaya Victoria</h5>
             </div>
@@ -140,16 +142,16 @@
         </div>
       </div>
     </section>
-    <section class="rating-section text-center my-5">
-      <h2>Rate our website!</h2>
-      <div class="stars">
-        <span class="star" data-value="1">★</span>
-        <span class="star" data-value="2">★</span>
-        <span class="star" data-value="3">★</span>
-        <span class="star" data-value="4">★</span>
-        <span class="star" data-value="5">★</span>
+    <section class="rating-container text-center my-5">
+      <h3>Rate our website!</h3>
+      <div class="stars" id="starRating">
+        <span class="star" data-value="1">&#9733;</span>
+        <span class="star" data-value="2">&#9733;</span>
+        <span class="star" data-value="3">&#9733;</span>
+        <span class="star" data-value="4">&#9733;</span>
+        <span class="star" data-value="5">&#9733;</span>
       </div>
-      <p id="ratingMessage" class="mt-3"></p>
+      <p id="ratingText" class="mt-2"></p>
     </section>
 
   </main>
@@ -159,4 +161,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
