--- a/about.html
+++ b/about.html
@@ -11,28 +11,39 @@
 </head>
 
 <body>
+  <div id="scrollProgress"></div>
+
   <div id="time"></div>
 
-  <header id="top-banner" class="header-section">
-    <div class="logo-container">
-      <img src="images/logo.png" alt="Chef's Secret Logo" class="logo">
+  <header id="top-banner" class="header-section d-flex align-items-center justify-content-between px-3">
+    <div class="d-flex align-items-center">
+      <div class="logo-container me-3">
+        <img src="images/logo.png" alt="Chef's Secret Logo" class="logo">
+      </div>
+      <h1 class="m-0">Chef's Secret</h1>
     </div>
-    <h1>Chef's Secret</h1>
-    <nav class="navbar navbar-expand-lg p-0">
-      <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
-        aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+
+    <div class="d-flex align-items-center">
+      <button id="themeToggle" class="btn btn-outline-secondary me-3" title="Toggle Dark/Light Mode">
+        Light/Dark
       </button>
 
-      <div class="collapse navbar-collapse" id="mainNav">
-        <ul class="navbar-nav ms-auto navbar-nav-custom">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-          <li class="nav-item"><a class="nav-link" href="FAQ.html">Questions</a></li>
-        </ul>
-      </div>
-    </nav>
+      <nav class="navbar navbar-expand-lg p-0">
+        <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+          aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="mainNav">
+          <ul class="navbar-nav ms-auto navbar-nav-custom">
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+            <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+            <li class="nav-item"><a class="nav-link" href="FAQ.html">Questions</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </header>
 
   <main>
@@ -159,6 +170,7 @@
     <p>© 2025 Chef's Secret | Created by Kuchitarova Kamilla and Maxutova Aidana | </p>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
 </body>
 
