--- a/dessert.html
+++ b/dessert.html
@@ -1,41 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chef's Secret</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div id="time"></div>
 
-    <header id="top-banner" class="header-section">
-    <div class="logo-container"> 
-      <img src="images/logo.png" alt="Chef's Secret Logo" class="logo"> 
-    </div> 
-    <h1>Chef's Secret</h1>
-    <nav class="navbar navbar-expand-lg p-0">
-      <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
-        data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chef's Secret</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <div id="scrollProgress"></div>
+
+  <div id="time"></div>
+
+  <header id="top-banner" class="header-section d-flex align-items-center justify-content-between px-3">
+    <div class="d-flex align-items-center">
+      <div class="logo-container me-3">
+        <img src="images/logo.png" alt="Chef's Secret Logo" class="logo">
+      </div>
+      <h1 class="m-0">Chef's Secret</h1>
+    </div>
+
+    <div class="d-flex align-items-center">
+      <button id="themeToggle" class="btn btn-outline-secondary me-3" title="Toggle Dark/Light Mode">
+        Light/Dark
       </button>
 
-      <div class="collapse navbar-collapse" id="mainNav">
-        <ul class="navbar-nav ms-auto navbar-nav-custom">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-          <li class="nav-item"><a class="nav-link" href="FAQ.html">Questions</a></li>
-        </ul>
-      </div>
-    </nav>
-  </header>
+      <nav class="navbar navbar-expand-lg p-0">
+        <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+          aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-<main>
-  <section class="highlighted-text">
+        <div class="collapse navbar-collapse" id="mainNav">
+          <ul class="navbar-nav ms-auto navbar-nav-custom">
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+            <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+            <li class="nav-item"><a class="nav-link" href="FAQ.html">Questions</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <section class="highlighted-text">
       <h2>Sweeten life one bite at a time</h2>
       <div class="recipe-list">
         <div class="recipe-card">
@@ -76,4 +87,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
