--- a/recipes/cheeseomelette.html
+++ b/recipes/cheeseomelette.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div id ="scrollProgress"></div>
+    <div id="scrollProgress"></div>
 
     <div id="time"></div>
 
@@ -20,7 +20,9 @@
             <div class="logo-container me-3">
                 <img src="../images/logo.png" alt="Chef's Secret Logo" class="logo">
             </div>
-            <h1 class="m-0">Chef's Secret</h1>
+            <a href="../index.html" class="text-decoration-none text-reset">
+                <h1 class="m-0">Chef's Secret</h1>
+            </a>
         </div>
 
         <div class="d-flex align-items-center">
@@ -37,9 +39,11 @@
                 <div class="collapse navbar-collapse" id="mainNav">
                     <ul class="navbar-nav ms-auto navbar-nav-custom">
                         <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../dishoftheday.html">Dish of the day</a></li>
                         <li class="nav-item"><a class="nav-link" href="../contact.html">Contact</a></li>
                         <li class="nav-item"><a class="nav-link" href="../about.html">About Us</a></li>
                         <li class="nav-item"><a class="nav-link" href="../FAQ.html">Questions</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../profile.html">Profile</a></li>
                     </ul>
                 </div>
             </nav>
@@ -69,7 +73,7 @@
             <div id="copyTooltip" class="mt-2 text-success" style="display:none;">
                 Ingredients copied to clipboard!
             </div>
-            
+
         </aside>
 
         <main class="recipe-main">
