--- a/dessert.html
+++ b/dessert.html
@@ -74,7 +74,7 @@
         </div>
 
         <div class="recipe-card">
-          <img src="images/Tiramisu.jpg" alt="Tiramisu">
+          <img src="images/tiramisu.jpg" alt="Tiramisu">
           <div class="recipe-info">
             <h3>Tiramisu</h3>
             <p>Classic Italian dessert layered with espresso-soaked ladyfingers and mascarpone cream.</p>
