--- a/lunch.html
+++ b/lunch.html
@@ -76,7 +76,7 @@
         </div>
 
         <div class="recipe-card">
-          <img src="images/Pestopasta.jpg" alt="Pesto pasta">
+          <img src="images/pestopasta.jpg" alt="Pesto pasta">
           <div class="recipe-info">
             <h3>Pesto pasta</h3>
             <p>Pesto pasta is simple to make and full of flavor. This recipe is perfect for busy weeknights and comes
